update: main.ipynb

--- a/HS_algorithm/main.ipynb
+++ b/HS_algorithm/main.ipynb
@@ -5,8 +5,8 @@
    "id": "cd4e4260741a1d6b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T11:09:09.003095Z",
-     "start_time": "2025-02-04T11:09:08.991884Z"
+     "end_time": "2025-02-04T21:53:31.363066Z",
+     "start_time": "2025-02-04T21:53:31.352114Z"
     }
    },
    "source": [
@@ -30,8 +30,8 @@
    "id": "4212183e79a5c9d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T11:09:09.018810Z",
-     "start_time": "2025-02-04T11:09:09.008827Z"
+     "end_time": "2025-02-04T21:53:31.378560Z",
+     "start_time": "2025-02-04T21:53:31.366222Z"
     }
    },
    "source": "n = 12",
@@ -47,29 +47,35 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T11:09:09.143500Z",
-     "start_time": "2025-02-04T11:09:09.128645Z"
+     "end_time": "2025-02-04T21:53:31.487970Z",
+     "start_time": "2025-02-04T21:53:31.473437Z"
     }
    },
    "cell_type": "code",
    "source": [
     "class Node:\n",
-    "    def __init__(self, uid, in_queue, prev_queue, next_queue):\n",
+    "    def __init__(self, uid, from_prev_q, from_next_q, to_prev_q, to_next_q):\n",
     "        self.uid = uid\n",
     "        self.status = 'unknown'\n",
-    "        self._in_queue = in_queue\n",
-    "        self._prev_queue = prev_queue\n",
-    "        self._next_queue = next_queue\n",
+    "        self._from_prev_q = from_prev_q\n",
+    "        self._from_next_q = from_next_q\n",
+    "        self._to_prev_q = to_prev_q\n",
+    "        self._to_next_q = to_next_q\n",
     "\n",
     "    def send_prev(self, data):\n",
-    "        self._prev_queue.put(data)\n",
+    "        self._to_prev_q.put(data)\n",
     "\n",
     "    def send_next(self, data):\n",
-    "        self._next_queue.put(data)\n",
+    "        self._to_next_q.put(data)\n",
     "\n",
-    "    def accept(self):\n",
-    "        data = self._in_queue.get()\n",
-    "        self._in_queue.task_done()\n",
+    "    def accept_prev(self):\n",
+    "        data = self._from_prev_q.get()\n",
+    "        self._from_prev_q.task_done()\n",
+    "        return data\n",
+    "\n",
+    "    def accept_next(self):\n",
+    "        data = self._from_next_q.get()\n",
+    "        self._from_next_q.task_done()\n",
     "        return data"
    ],
    "id": "5944da8db6790d15",
@@ -85,8 +91,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T11:09:09.173336Z",
-     "start_time": "2025-02-04T11:09:09.160750Z"
+     "end_time": "2025-02-04T21:53:31.519345Z",
+     "start_time": "2025-02-04T21:53:31.504339Z"
     }
    },
    "cell_type": "code",
@@ -98,7 +104,7 @@
     "    while True:\n",
     "        node.send_next(send)\n",
     "\n",
-    "        v = node.accept()\n",
+    "        v = node.accept_prev()\n",
     "        if v == \"TERM\":\n",
     "            break\n",
     "\n",
@@ -121,17 +127,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T11:09:09.203578Z",
-     "start_time": "2025-02-04T11:09:09.189452Z"
+     "end_time": "2025-02-04T21:53:31.550513Z",
+     "start_time": "2025-02-04T21:53:31.535980Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def lcr_run(total_nodes):\n",
-    "    queues = [queue.Queue() for _ in range(total_nodes)]\n",
-    "    prev_queues = [queues[(i - 1) % total_nodes] for i in range(total_nodes)]\n",
-    "    next_queues = [queues[(i + 1) % total_nodes] for i in range(total_nodes)]\n",
-    "    nodes = [Node(i, queues[i], prev_queues[i], next_queues[i]) for i in range(total_nodes)]\n",
+    "    qs = [queue.Queue() for _ in range(total_nodes)]\n",
+    "    nodes = [Node(i, qs[i], None, None, qs[i - 1]) for i in range(total_nodes)]\n",
     "\n",
     "    threads = []\n",
     "    for node in nodes:\n",
@@ -140,7 +144,7 @@
     "        threads.append(t)\n",
     "\n",
     "    time.sleep(3)\n",
-    "    for q in queues:\n",
+    "    for q in qs:\n",
     "        q.put(\"TERM\")\n",
     "\n",
     "    for t in threads:\n",
@@ -157,8 +161,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T11:09:12.252701Z",
-     "start_time": "2025-02-04T11:09:09.220033Z"
+     "end_time": "2025-02-04T21:53:34.591278Z",
+     "start_time": "2025-02-04T21:53:31.565974Z"
     }
    },
    "cell_type": "code",
@@ -197,82 +201,74 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T11:09:12.299615Z",
-     "start_time": "2025-02-04T11:09:12.284378Z"
+     "end_time": "2025-02-04T21:53:34.669400Z",
+     "start_time": "2025-02-04T21:53:34.652434Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def hs_node_worker(node):\n",
     "    u = node.uid\n",
-    "    send_plus = ('from_prev', u, 'out', 1)\n",
-    "    send_minus = ('from_next', u, 'out', 1)\n",
+    "    send_plus = (u, 'out', 1)\n",
+    "    send_minus = (u, 'out', 1)\n",
     "    phase = 0\n",
     "\n",
     "    while True:\n",
     "        node.send_next(send_plus)\n",
-    "        node.send_next(send_minus)\n",
+    "        node.send_prev(send_minus)\n",
+    "        send_plus, send_minus = None, None\n",
     "\n",
-    "        v_prev, v_next = None, None\n",
-    "        while v_prev is None or v_next is None:\n",
-    "            v = node.accept()\n",
-    "            if v == \"TERM\":\n",
-    "                return\n",
-    "            if v is None:\n",
-    "                continue\n",
-    "            if v[0] == 'from_prev':\n",
-    "                v_prev = v[1:]\n",
-    "            if v[0] == 'from_next':\n",
-    "                v_next = v[1:]\n",
+    "        v_prev = node.accept_prev()\n",
+    "        v_next = node.accept_next()\n",
+    "        if v_prev == \"TERM\" or v_next == \"TERM\":\n",
+    "            break\n",
     "\n",
-    "        if v_prev[1] == 'out':\n",
+    "        if (v_prev is not None) and v_prev[1] == 'out':\n",
     "            v, out, h = v_prev\n",
     "            if v > u and h > 1:\n",
-    "                send_plus = ('from_prev', v, 'out', h - 1)\n",
+    "                send_plus = (v, 'out', h - 1)\n",
     "            elif v > u and h == 1:\n",
-    "                send_minus = ('from_next', v, 'in', 1)\n",
+    "                send_minus = (v, 'in', 1)\n",
     "            elif v == u:\n",
     "                node.status = 'leader'\n",
     "\n",
-    "        if v_next[1] == 'out':\n",
+    "        if (v_next is not None) and v_next[1] == 'out':\n",
     "            v, out, h = v_next\n",
     "            if v > u and h > 1:\n",
-    "                send_minus = ('from_next', v, 'out', h - 1)\n",
+    "                send_minus = (v, 'out', h - 1)\n",
     "            elif v > u and h == 1:\n",
-    "                send_plus = ('from_prev', v, 'in', 1)\n",
+    "                send_plus = (v, 'in', 1)\n",
     "            elif v == u:\n",
     "                node.status = 'leader'\n",
     "\n",
-    "        if v_prev[1] == 'in' and v_prev[2] == 1 and v_prev[0] != u:\n",
+    "        if (v_prev is not None) and v_prev[1] == 'in' and v_prev[2] == 1 and v_prev[0] != u:\n",
     "            v, in_, h = v_prev\n",
-    "            send_plus = ('from_prev', v, 'in', 1)\n",
-    "        if v_next[1] == 'in' and v_next[2] == 1 and v_next[0] != u:\n",
+    "            send_plus = (v, 'in', 1)\n",
+    "        if (v_next is not None) and v_next[1] == 'in' and v_next[2] == 1 and v_next[0] != u:\n",
     "            v, in_, h = v_next\n",
-    "            send_minus = ('from_next', v, 'in', 1)\n",
-    "        if ((v_prev[0] == u and v_prev[1] == 'in' and v_prev[2] == 1)\n",
-    "                and (v_next[0] == u and v_next[1] == 'in' and v_next[2] == 1)):\n",
+    "            send_minus = (v, 'in', 1)\n",
+    "        if v_prev == (u, 'in', 1) and v_next == (u, 'in', 1):\n",
     "            phase += 1\n",
-    "            send_plus = ('from_prev', u, 'out', 2 ** phase)\n",
-    "            send_minus = ('from_next', u, 'out', 2 ** phase)"
+    "            send_plus = (u, 'out', 2 ** phase)\n",
+    "            send_minus = (u, 'out', 2 ** phase)"
    ],
-   "id": "174c23c835bbfbdc",
+   "id": "558fd9cef4d71259",
    "outputs": [],
    "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T11:09:12.314993Z",
-     "start_time": "2025-02-04T11:09:12.302674Z"
+     "end_time": "2025-02-04T21:53:34.700457Z",
+     "start_time": "2025-02-04T21:53:34.695224Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def hs_run(total_nodes):\n",
-    "    queues = [queue.Queue() for _ in range(total_nodes)]\n",
-    "    prev_queues = [queues[(i - 1) % total_nodes] for i in range(total_nodes)]\n",
-    "    next_queues = [queues[(i + 1) % total_nodes] for i in range(total_nodes)]\n",
-    "    nodes = [Node(i, queues[i], prev_queues[i], next_queues[i]) for i in range(total_nodes)]\n",
+    "    qs1 = [queue.Queue() for _ in range(total_nodes)]\n",
+    "    qs2 = [queue.Queue() for _ in range(total_nodes)]\n",
+    "    nodes = [Node(i, qs1[i], qs2[i - 1], qs2[i], qs1[i - 1]) for i in range(total_nodes)]\n",
     "\n",
     "    threads = []\n",
     "    for node in nodes:\n",
@@ -281,8 +277,9 @@
     "        threads.append(t)\n",
     "\n",
     "    time.sleep(3)\n",
-    "    for q in queues:\n",
-    "        q.put(\"TERM\")\n",
+    "    for i in range(total_nodes):\n",
+    "        qs1[i].put(\"TERM\")\n",
+    "        qs2[i].put(\"TERM\")\n",
     "\n",
     "    for t in threads:\n",
     "        t.join()\n",
@@ -298,8 +295,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T11:09:15.353461Z",
-     "start_time": "2025-02-04T11:09:12.331521Z"
+     "end_time": "2025-02-04T21:53:37.736562Z",
+     "start_time": "2025-02-04T21:53:34.717284Z"
     }
    },
    "cell_type": "code",
