update: main.ipynb

--- a/MIS_algorithm/main.ipynb
+++ b/MIS_algorithm/main.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-08T14:36:59.032303Z",
-     "start_time": "2025-02-08T14:36:59.020775Z"
+     "end_time": "2025-02-08T16:29:32.521365Z",
+     "start_time": "2025-02-08T16:29:32.516897Z"
     }
    },
    "cell_type": "code",
@@ -14,13 +14,19 @@
    "execution_count": 1
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "##### Declare the TreeNode class",
+   "id": "46f292a1de36299b"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-08T14:36:59.155916Z",
-     "start_time": "2025-02-08T14:36:59.141199Z"
+     "end_time": "2025-02-08T16:29:32.537131Z",
+     "start_time": "2025-02-08T16:29:32.524733Z"
     }
    },
    "source": [
@@ -59,7 +65,6 @@
     "        if not is_root:\n",
     "            connector = \"└── \" if is_last else \"├── \"\n",
     "            new_prefix = prefix + (\"    \" if is_last else \"│   \")\n",
-    "\n",
     "        print(prefix + connector + f\"{self.id}\")\n",
     "\n",
     "        for i, child in enumerate(self.children):\n",
@@ -70,63 +75,69 @@
    "execution_count": 2
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-08T14:36:59.172155Z",
-     "start_time": "2025-02-08T14:36:59.159589Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "def create_sample_tree():\n",
-    "    \"\"\"\n",
-    "    Creates a sample tree for demonstration purposes.\n",
-    "\n",
-    "    Tree Structure:\n",
-    "         1\n",
-    "       / | \\\n",
-    "      2  3  4\n",
-    "         | | \\\n",
-    "         5 6  7\n",
-    "\n",
-    "    :return: Root TreeNode of the sample tree.\n",
-    "    \"\"\"\n",
-    "    root = TreeNode(1)\n",
-    "    child_2 = TreeNode(2)\n",
-    "    child_3 = TreeNode(3)\n",
-    "    child_4 = TreeNode(4)\n",
-    "\n",
-    "    child_5 = TreeNode(5)\n",
-    "    child_6 = TreeNode(6)\n",
-    "    child_7 = TreeNode(7)\n",
-    "\n",
-    "    root.add_child(child_2)\n",
-    "    root.add_child(child_3)\n",
-    "    root.add_child(child_4)\n",
-    "\n",
-    "    child_3.add_child(child_5)\n",
-    "    child_4.add_child(child_6)\n",
-    "    child_4.add_child(child_7)\n",
-    "\n",
-    "    return root"
-   ],
-   "id": "c047de003893827f",
-   "outputs": [],
-   "execution_count": 3
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### Finding Maximum Independent Set in a tree",
+   "id": "856e4afaabd975f8"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-08T14:36:59.203099Z",
-     "start_time": "2025-02-08T14:36:59.188284Z"
+     "end_time": "2025-02-08T16:29:32.661583Z",
+     "start_time": "2025-02-08T16:29:32.647052Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "root = create_sample_tree()\n",
+    "def mis_tree(node):\n",
+    "    c_mis = [mis_tree(c) for c in node.children]  # MIS for each child node\n",
+    "    c_mis = list(chain.from_iterable(c_mis))  # flatten list (2d -> 1d)\n",
+    "\n",
+    "    gc_mis = [mis_tree(gc) for gc in node.grandchildren]  # MIS for each grandchild node\n",
+    "    gc_mis = list(chain.from_iterable(gc_mis))  # flatten list (2d -> 1d)\n",
+    "    gc_mis.append(node)  # add current node to MIS\n",
+    "\n",
+    "    node_mis = max(c_mis, gc_mis, key=len)  # select the largest MIS\n",
+    "    return node_mis"
+   ],
+   "id": "d49e63908e458ecd",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "##### First example",
+   "id": "e1b586dc5f0584d9"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-08T16:29:32.693724Z",
+     "start_time": "2025-02-08T16:29:32.679039Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "root = TreeNode(1)\n",
+    "\n",
+    "node_2 = TreeNode(2)\n",
+    "node_3 = TreeNode(3)\n",
+    "node_4 = TreeNode(4)\n",
+    "node_5 = TreeNode(5)\n",
+    "node_6 = TreeNode(6)\n",
+    "node_7 = TreeNode(7)\n",
+    "\n",
+    "root.add_child(node_2)\n",
+    "root.add_child(node_3)\n",
+    "root.add_child(node_4)\n",
+    "node_3.add_child(node_5)\n",
+    "node_4.add_child(node_6)\n",
+    "node_4.add_child(node_7)\n",
+    "\n",
     "root.display()"
    ],
-   "id": "53bd87f108015b02",
+   "id": "c047de003893827f",
    "outputs": [
     {
      "name": "stdout",
@@ -147,38 +158,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-08T14:36:59.234230Z",
-     "start_time": "2025-02-08T14:36:59.219460Z"
+     "end_time": "2025-02-08T16:29:32.723429Z",
+     "start_time": "2025-02-08T16:29:32.709628Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def mis_tree(node):\n",
-    "    c_mis = [mis_tree(c) for c in node.children]  # MIS for each child node\n",
-    "    c_mis = list(chain.from_iterable(c_mis))  # flatten list (2d -> 1d)\n",
+    "mis = sorted(mis_tree(root), key=lambda n: n.id)\n",
     "\n",
-    "    gc_mis = [mis_tree(gc) for gc in node.grandchildren]  # MIS for each grandchild node\n",
-    "    gc_mis = list(chain.from_iterable(gc_mis))  # flatten list (2d -> 1d)\n",
-    "    gc_mis.append(node)  # add current node to MIS\n",
-    "\n",
-    "    node_mis = max(c_mis, gc_mis, key=len)  # select the largest MIS\n",
-    "    return node_mis"
-   ],
-   "id": "60e97b642ad80528",
-   "outputs": [],
-   "execution_count": 5
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-08T14:36:59.280006Z",
-     "start_time": "2025-02-08T14:36:59.264882Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "mis = mis_tree(root)\n",
-    "print([n.id for n in mis])"
+    "print(f\"MIS size: {len(mis)}\")\n",
+    "print(f\"MIS nodes: {[n.id for n in mis]}\")"
    ],
    "id": "c71b3dbac502c8af",
    "outputs": [
@@ -186,11 +175,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 5, 6, 7]\n"
+      "MIS size: 4\n",
+      "MIS nodes: [2, 5, 6, 7]\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "##### Second example",
+   "id": "fb44677a56cabc74"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-08T16:29:32.754631Z",
+     "start_time": "2025-02-08T16:29:32.738996Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "root = TreeNode(1)\n",
+    "\n",
+    "node_2 = TreeNode(2)\n",
+    "node_3 = TreeNode(3)\n",
+    "node_4 = TreeNode(4)\n",
+    "node_5 = TreeNode(5)\n",
+    "node_6 = TreeNode(6)\n",
+    "node_7 = TreeNode(7)\n",
+    "node_8 = TreeNode(8)\n",
+    "\n",
+    "root.add_child(node_2)\n",
+    "root.add_child(node_3)\n",
+    "node_2.add_child(node_4)\n",
+    "node_2.add_child(node_5)\n",
+    "node_3.add_child(node_6)\n",
+    "node_3.add_child(node_7)\n",
+    "node_6.add_child(node_8)\n",
+    "\n",
+    "root.display()"
+   ],
+   "id": "440e110fec1a8e2c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "├── 2\n",
+      "│   ├── 4\n",
+      "│   └── 5\n",
+      "└── 3\n",
+      "    ├── 6\n",
+      "    │   └── 8\n",
+      "    └── 7\n"
      ]
     }
    ],
    "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-08T16:29:32.785403Z",
+     "start_time": "2025-02-08T16:29:32.770864Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "mis = sorted(mis_tree(root), key=lambda n: n.id)\n",
+    "\n",
+    "print(f\"MIS size: {len(mis)}\")\n",
+    "print(f\"MIS nodes: {[n.id for n in mis]}\")"
+   ],
+   "id": "ecc0080f1310a4c8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MIS size: 5\n",
+      "MIS nodes: [1, 4, 5, 7, 8]\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   }
  ],
  "metadata": {
